--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <header>
         <div class="social-links">
             <a href="https://www.instagram.com/winmaster33/" target="_blank">Instagram</a>
-            <a href="https://www.youtube.com/c/gamewin9933" target="_blank">YouTube</a>
+            <a href="https://www.youtube.com/@gamewin9933" target="_blank">YouTube</a>
             <a href="https://discord.gg/FwsDjCpdRJ" target="_blank">Discord</a>
         </div>
     </header>
