--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
           }
           </script>
     </div>
-    <button><a href="">Winmaster paylaşım sayfası</a></button>
+    <button><a href="https://glwins.github.io/paylas/">Winmaster paylaşım sayfası</a></button>
 </body>
 </html>
